@@ -1,3 +1,8 @@
+2012-10-05  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/diagMatrix.R (.sparseDiagonal): new 'unitri' argument;
+	more flexibility; new: solve(<dsCMatrix>, <missing>)
+
 2012-09-01  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/sparseVector.R (sparseVector): new constructor
